# forecasting-mrp

./: .dockerignore  .env.example  .gitignore  PRD.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
apps/forecast-engine/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/forecast-engine/src/: config.py  main.py
apps/forecast-engine/src/api/: health.py  router.py
apps/forecast-engine/src/api/routes/: __init__.py  backtest.py  models_meta.py  pdf_parse.py  predict.py  train.py
apps/forecast-engine/src/backtesting/: backtester.py  champion_challenger.py  metrics.py
apps/forecast-engine/src/db/: database.py  models.py
apps/forecast-engine/src/db/repositories/: __init__.py  classification_repo.py  execution_repo.py  forecast_repo.py  time_series_repo.py
apps/forecast-engine/src/models/: base.py  registry.py
apps/forecast-engine/src/models/croston/: croston_model.py
apps/forecast-engine/src/models/ensemble/: ensemble_model.py
apps/forecast-engine/src/models/ets/: ets_model.py
apps/forecast-engine/src/models/lgbm/: lgbm_model.py
apps/forecast-engine/src/models/tft/: tft_model.py  (+2 more)
apps/forecast-engine/src/parsers/: __init__.py  base.py  composicao_parser.py  detector.py  faturamento_parser.py  inventario_parser.py  models.py  movimentacao_parser.py  produtos_parser.py
apps/forecast-engine/src/pipeline/: executor.py  segmentation.py
apps/forecast-engine/src/workers/: job_processor.py  progress_reporter.py
apps/forecast-engine/tests/: conftest.py  test_backtester.py  test_backtesting_metrics.py  test_champion_challenger.py  test_classification_repo.py  test_croston_model.py  test_ensemble_model.py  test_ets_model.py  test_execution_repo.py  test_forecast_repo.py  test_job_processor.py  test_lgbm_model.py  test_model_registry.py  test_naive_model.py  test_pipeline_executor.py  test_progress_reporter.py  test_routes.py  test_segmentation.py  test_tft_model.py  test_time_series_repo.py
(+625 files in other folders)
