[project]
name = "forecasting-mrp-engine"
version = "0.1.0"
description = "ForecastingMRP Forecast Engine - ML/Forecasting service with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "UNLICENSED"}

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"
