[project]
name = "forecasting-mrp-engine"
version = "0.1.0"
description = "ForecastingMRP Forecast Engine - ML/Forecasting service with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "UNLICENSED"}
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "sqlalchemy>=2.0.31",
    "asyncpg>=0.29.0",
    "redis>=5.0.7",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.3.1",
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.2",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scipy>=1.13.1",
]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.10",
    "mypy>=1.10.1",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"
